# guideCounterWrapper

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  NAMESPACE  README.md  cleanup  cleanup.win  configure  configure.win  counter.Rproj  cran-comments.md  guideCounterWrapper.Rproj
.github/workflows/: rhub.yaml
R/: extendr-wrappers.R
man/: guidecounter_count.Rd  run_counter.Rd
src/: .gitignore  Makevars  Makevars.in  Makevars.win.in  counter-win.def  entrypoint.c  guideCounterWrapper-win.def
src/rcounter/: Cargo.toml  vendor-authors.R
src/rcounter/src/: lib.rs
src/rust/: Cargo.toml
src/rust/src/: lib.rs
tools/: config.R
